--- a/interactive-maps.ipynb
+++ b/interactive-maps.ipynb
@@ -9,7 +9,10 @@
    "outputs": [],
    "source": [
     "# convert our shapefile to GeoJSON\n",
-    "!ogr2ogr -f GeoJSON gin_adm/GIN_adm2.json gin_adm/GIN_adm2.shp"
+    "# on mybinder use:\n",
+    "#!/home/main/anaconda2/envs/binder/bin/ogr2ogr -f GeoJSON gin_adm/GIN_adm2.json gin_adm/GIN_adm2.shp\n",
+    "# on your own machine\n",
+    "#!ogr2ogr -f GeoJSON gin_adm/GIN_adm2.json gin_adm/GIN_adm2.shp"
    ]
   },
   {
@@ -46,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "geo_json_data = json.load(open('gin_adm/GIN_adm2.json'))"
+    "geo_json_data = json.load(open('gin_adm/GIN_adm2.json', encoding='utf-8'))"
    ]
   },
   {
