More detail on pandas

--- a/ebola.ipynb
+++ b/ebola.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting started with `pandas`\n",
-    "\n",
-    "`pandas` is the python library for dealing with data that is organised as a \"spreadsheet\".\n",
-    "\n",
-    "It is incredibly powerful, and allows for very terse code.\n",
-    "\n",
-    "### Pros\n",
-    "* It’s terse, so you can develop quickly\n",
-    "\n",
-    "### Cons\n",
-    "* It’s terse, so it tends to be more write-only code than not\n",
-    "\n",
-    "![Power tools ahead](http://49.media.tumblr.com/tumblr_lvck9qVHou1qbvl2io1_400.gif)"
+    "# Analysing ebola cases"
    ]
   },
   {
@@ -38,7 +26,6 @@
    },
    "outputs": [],
    "source": [
-    "# pandas is a library for handling spreadsheets\n",
     "import pandas\n",
     "import matplotlib.pyplot as plt"
    ]
