--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -460,7 +460,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Let's start with some data\n",
+    "# Switch to cycling data from Zurich!\n",
+    "\n",
+    "----\n",
+    "\n",
+    "## Cycling data from Montreal\n",
     "\n",
     "This is cycling data from Montreal."
    ]
@@ -552,7 +556,7 @@
    },
    "outputs": [],
    "source": [
-    "# access teh day part of the date of each row\n",
+    "# access the day part of the date of each row\n",
     "berri_bikes.index.day"
    ]
   },
