Link to the data

--- a/zurich-velos.ipynb
+++ b/zurich-velos.ipynb
@@ -17,6 +17,18 @@
    },
    "outputs": [],
    "source": [
+    "# fetch the data if you don't have it\n",
+    "!wget https://data.stadt-zuerich.ch/storage/f/verkehrszaehlungen_werte_fussgaenger_velo/2016_verkehrszaehlungen_werte_fussgaenger_velo.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "%matplotlib inline"
    ]
   },
