--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -14,9 +14,7 @@
     "* It’s terse, so you can develop quickly\n",
     "\n",
     "### Cons\n",
-    "* It’s terse, so it tends to be more write-only code than not\n",
-    "\n",
-    "![Power tools ahead](http://49.media.tumblr.com/tumblr_lvck9qVHou1qbvl2io1_400.gif)"
+    "* It’s terse, so it tends to be more write-only code than not"
    ]
   },
   {
@@ -301,15 +299,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Wait, what??\n",
-    "\n",
-    "Why does it say 2.117??"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -405,7 +394,7 @@
    "source": [
     "# Unsorted rows? No problem\n",
     "\n",
-    "Because `pandas` uses the index, swapping around rows isn't a problem"
+    "Because `pandas` uses the index, swapping around rows isn't a problem. Imagine your spreadsheet was indexed by date (for example daily temperatures)."
    ]
   },
   {
@@ -418,6 +407,17 @@
    "source": [
     "df2 = pd.DataFrame({'A': [2, 4, 7], 'B': [2, 4, 9]}, index=[2, 0, 1])\n",
     "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df1"
    ]
   },
   {
@@ -455,6 +455,15 @@
     "df2 + df3\n",
     "# NaN means Not A Number"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
