--- a/zurich-velos.ipynb
+++ b/zurich-velos.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# fetch the data if you don't have it\n",
-    "!wget https://data.stadt-zuerich.ch/storage/f/verkehrszaehlungen_werte_fussgaenger_velo/2016_verkehrszaehlungen_werte_fussgaenger_velo.csv"
+    "#!wget https://data.stadt-zuerich.ch/storage/f/verkehrszaehlungen_werte_fussgaenger_velo/2016_verkehrszaehlungen_werte_fussgaenger_velo.csv"
    ]
   },
   {
@@ -132,7 +132,9 @@
    "source": [
     "# Focus on Y2G13124879\n",
     "\n",
-    "Not a gravitatnional wave, just one random counting station in Zurich."
+    "Not a gravitatnional wave, just one random counting station in Zurich.\n",
+    "\n",
+    "This counter is on [Militaerbruecke](https://www.google.com/maps/place/Milit%C3%A4rbr%C3%BCcke,+8004+Z%C3%BCrich,+Switzerland/@47.3750396,8.5320315,17z/data=!4m5!3m4!1s0x47900a05078b48d5:0x63d0455461c631e7!8m2!3d47.3750563!4d8.534021). [Inward direction](https://www.google.com/maps/place/Langstrasse,+Z%C3%BCrich,+Switzerland/@47.3784256,8.5196336,15z/data=!3m1!4b1!4m5!3m4!1s0x47900a181f1fbc37:0x4ded91a7167d938a!8m2!3d47.3787733!4d8.5273363) [Outward direction](https://www.google.com/maps/place/Bahnhofstrasse,+8001+Z%C3%BCrich,+Switzerland/@47.3715832,8.5304294,15z/data=!3m1!4b1!4m5!3m4!1s0x47900a0a4578c013:0x96371feb65728644!8m2!3d47.3722923!4d8.539831)"
    ]
   },
   {
@@ -190,12 +192,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# access the `day` part of the date of each entry\n",
-    "berri_bikes.index.day"
+    "loc_Y2_daily.index.day"
    ]
   },
   {
@@ -288,6 +290,33 @@
     "average.index = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
     "average.plot(kind='bar', title=\"average riders per weekday\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
